# CMake_Lesson

./: README.md
Demo1/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake  main.c
Demo2/: CMakeCache.txt  Demo  Makefile  MathFunctions.c  cmake_install.cmake  main.c
Demo3/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake  main.c
Demo3/my_math/: CMakeCache.txt  Makefile  MathFunctions.h  cmake_install.cmake
Demo4/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake  main.c
Demo4/my_math/: CMakeCache.txt  Makefile  cmake_install.cmake
new-Demo1/: CMakeLists.txt
new-Demo1/include/: head.h
new-Demo1/src/: add.c  div.c  main.c  mult.c  sub.c
new-Demo2-genrate-shared-lib/: CMakeLists.txt
new-Demo2-genrate-static-lib/: CMakeLists.txt
new-Demo2-genrate-static-lib/src/: sub.c
new-Demo2-use-shared-lib-self/: CMakeLists.txt
new-Demo2-use-shared-lib-system/: CMakeLists.txt
new-Demo2-use-shared-lib-system/include/: head.h
new-Demo2-use-shared-lib-system/src/: div.c  main.c  mult.c
new-Demo2-use-static-lib/: CMakeLists.txt
new-Demo3-varible-in-cmake/: CMakeLists.txt
new-Demo3-varible-in-cmake/src-1/: main.c
new-Demo3-varible-in-cmake/src-2/: add.c
new-Demo4-multi-cmake/: CMakeLists.txt
new-Demo4-multi-cmake/calc/: CMakeLists.txt  add.c  div.c  mult.c  sub.c
new-Demo4-multi-cmake/include/: insert.h
new-Demo4-multi-cmake/sort/: CMakeLists.txt  insert.c
new-Demo4-multi-cmake/test1/: CMakeLists.txt  calc.c
new-Demo4-multi-cmake/test2/: CMakeLists.txt  sort.c
